# currencylib

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  data.rs  locale.rs  minor_unit_symbols.md
.github/workflows/: ci.yml  msrv.yml
data/: Cargo.toml
data/src/: currencies.rs  currencies_test.rs  iso_currencies_data.rs  lib.rs
src/: currencies.rs  data.rs  data_test.rs  iso_currencies.rs  iso_currencies_test.rs  lib.rs
src/data/: currencies.rs  currencies_test.rs  iso_currencies_data.rs  mod.rs
