[package]
name = "currencylib"
version = "0.2.1"
edition = "2024"
authors = ["Muhammad Fathir Irhas <fathir.irhas@gmail.com>"]
description = "A library containing types and metadata for currencies."
license = "MIT"
repository = "https://github.com/mfirhas/currencylib"
documentation = "https://docs.rs/currencylib"
keywords = ["finance", "currency", "money", "type-safe", "no-std"]
categories = ["finance", "data-structures"]
rust-version = "1.85.1"
exclude = [
  "**/*_test.rs",
  "tests/**",
  "examples/**",
  "Makefile",
  "AGENTS.md",
]

[package.metadata.docs.rs]
all-features = true

[features]
data = ["dep:data"]

[dependencies]
data = { path = "data", optional = true }

[build-dependencies]
data = { path = "data" }

